# Informatica_Grafica

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cosas_que_hacer.txt
assets/in/: black_white.ppm  cat.ply  cat.ppm  caustics.txt  caustics_2.txt  caustics_3.txt  cesped_b.ppm  charizar-texture.ppm  charizar.ply  cielo_b.ppm  color_bleeding.txt  color_bleeding_2.txt  color_bleeding_3.txt  color_bleeding_4.txt  complete_scene.xml  cuadro.ppm  example.ppm  lampara.ply  light.ply  other_scene.xml  pen.ply  peng.ply  penguin.ply  rat.ply  scene.txt  scene.xml  scene2.xml  scene_convergence_area_light.txt  scene_geometries_1.txt  scene_geometries_2.txt  scene_spp.txt  scene_spp_2.txt  script.bat  shadows_1.txt  shadows_2.txt  teapod.ply  test.txt  vaca.ply
examples/complete_scene/: README.md  main_scene_photon_mapping.xml  main_scene_ray_tracing.xml
include/: base.hpp  bmp_file.hpp  camera.hpp  color.hpp  color_map.hpp  conection.hpp  constants.hpp  double.hpp  geometric.hpp  intersection.hpp  light.hpp  linear_map.hpp  matrix.hpp  pixel.hpp  pixel_map.hpp  planet copy.hpp  planet.hpp  ply_file.hpp  ppm_file.hpp  ray.hpp  scene.hpp  sphere.hpp  test.hpp  tiff_file.hpp  tone_mapping.hpp
include/brdf/: brdf.hpp
include/class/: base.hpp  conection.hpp  geometric.hpp  linear_map.hpp  matrix.hpp  point.hpp  shpere.hpp  sphere.hpp  test.hpp  vector.hpp
include/color/: CIE_1931_nvidia.hpp  color.hpp  colorRGB.hpp  color_map.hpp  spectral_color.hpp
include/files/: parse_xml.hpp  ply_file.hpp  ppm_file.hpp  scene_file.hpp
include/geometry/: all_geometry.hpp  bounding_box.hpp  box.hpp  cone.hpp  cylinder.hpp  disk.hpp  ellipsoid.hpp  face.hpp  geometry.hpp  mesh.hpp  plane.hpp  property.hpp  sphere.hpp  triangle.hpp  triangle_mesh.hpp
include/global_config/: constants.hpp  global_config.hpp
include/intersection/: intersection.hpp  intersection_light.hpp  intersection_object.hpp
include/kernel_density/: all_kernel_densities.hpp  cone_density.hpp  constant_density.hpp  gauss_density.hpp  kernel_density.hpp
include/light/: abstract_light.hpp  area_light.hpp  collection_light.hpp  collection_lights.hpp  light.hpp  photon.hpp  punctual_light.hpp
include/metrics/: metrics.hpp
include/properties/: property.hpp
include/render/: photon_mapping.h  photon_mapping.hpp  ray_tracing.h  ray_tracing.hpp  render.hpp
include/scene/: camera.hpp  intersection.hpp  light.hpp  ray.hpp  render.hpp  scene.hpp
include/spatial_element/: base.hpp  geometric_original.hpp  linear_map.hpp  point.hpp  spatial_element.hpp  vector.hpp
include/test/: test.hpp
include/threading/: thread_pool.hpp
include/tone_mapping/: all_tone_mapping.hpp  clamping.hpp  drago.hpp  equalization.hpp  (+5 more)
lib/: PPM_to_PNG_dir.py  PPM_to_png.py  color.py  compute_metrics_images.py  plot.py  plot_num_avoided.py  plot_results_laplace.py  plot_results_mse.py  plot_thread_time.py  verPPM.py
practica1/: main.cpp  punto.cpp  punto.hpp  vector.cpp  vector.hpp
src/: CMakeLists.txt  base.cpp  bmp_file.cpp  camera.cpp  color.cpp  color_map.cpp  conection.cpp  geometric.cpp  intersection.cpp  kd_tree_example.cpp  kd_tree_photon.hpp  light.cpp  linear_map.cpp  main.cpp  matrix.cpp  pixel.cpp  pixel_map.cpp  planet copy.cpp  planet.cpp  ply_file.cpp  ppm_file.cpp  property.cpp  ray.cpp  scene.cpp  sphere.cpp  testing.cpp  tiff_file.cpp  tone_mapping.cpp
src/brdf/: CMakeLists.txt  brdf.cpp
src/class/: base.cpp  conection.cpp  geometric.cpp  linear_map.cpp  matrix.cpp  point.cpp  sphere.cpp  vector.cpp
src/color/: CMakeLists.txt  color.cpp  colorRGB.cpp  color_map.cpp  spectral_color.cpp
src/color/tone_mapping/: CMakeLists.txt  clamping.cpp  drago.cpp  equalization.cpp  gamma.cpp  logarithmic.cpp
src/files/: CMakeLists.txt  ply_file.cpp  ppm_file.cpp  scene_file.cpp  scene_file_xml.cpp
src/geometry/: CMakeLists.txt  bounding_box.cpp  box.cpp  cone.cpp  cylinder.cpp  disk.cpp  ellipse.cpp  ellipsoid.cpp  face.cpp  mesh.cpp  plane.cpp  property.cpp  sphere.cpp  triangle.cpp  triangle_mesh.cpp
src/geometry/area_light/: CMakeLists.txt  box_light.cpp
src/geometry/kd-trees/: CMakeLists.txt  kd-tree.cpp
src/geometry/textures/: CMakeLists.txt
src/geometry/textures/texture_face/: CMakeLists.txt  texture_face_ppm.cpp
src/global_config/: CMakeLists.txt  global_config.cpp
src/intersection/: CMakeLists.txt  cMakeLists.txt  intersection.cpp  intersection_light.cpp  intersection_object.cpp
src/kernel_density/: CMakeLists.txt  cone_density.cpp  constant_density.cpp  gauss_density.cpp
src/light/: CMakeLists.txt  area_light.cpp  collection_light.cpp  light.cpp  photon.cpp  punctual_light.cpp
src/light/area_light/: CMakeLists.txt  area_light.cpp  box_light.cpp
src/properties/: CMakeLists.txt  property.cpp
src/properties/brdf/: CMakeLists.txt  absorption_brdf.cpp  brdf.cpp  diffuse_brdf.cpp  refractive_brdf.cpp  roulette_brdf.cpp  specular_brdf.cpp
src/render/: CMakeLists.txt  photon_mapping.cpp  ray_tracing.cpp  render.cpp
src/render/photon_mapping/: CMakeLists.txt  direct_photon_mapping.cpp  explicit_photon_mapping.cpp  photon_mapping.cpp
src/scene/: CMakeLists.txt  camera.cpp  intersection.cpp  light.cpp  ray.cpp  render.cpp  scene.cpp
src/spatial_element/: CMakeLists.txt  base.cpp  geometric_original.cpp  linear_map.cpp  matrix.cpp  point.cpp  spatial_element.cpp  vector.cpp
src/tone_mapping/: CMakeLists.txt  clamping.cpp  drago.cpp  equalization.cpp  equalization_clamping.cpp  gamma.cpp  gamma_clamping.cpp  logarithmic.cpp  tone_mapping.cpp
tests/: CMakeLists.txt  test_base.cpp  test_color.cpp  test_color_map.cpp  test_ellipsoid.cpp  test_geometric.cpp  test_linear_map.cpp  test_matrix.cpp  test_pixel.cpp  test_pixel_map.cpp  test_planet.cpp  test_ppm_file.cpp  test_spatial_element.cpp  test_sphere.cpp  test_tone_mapping.cpp
tests/geometry_tests/: CMakeLists.txt  test_bounding_box.cpp  test_cone.cpp  test_cylinder.cpp  test_disk.cpp  test_ellipsoid.cpp  test_face.cpp  test_plane.cpp  test_sphere.cpp  test_triangle.cpp
tests/test_brdf/: CMakeLists.txt  test_refractive.cpp
(+48 files in other folders)
